# systerm

./: Cargo.toml  README.md  install.ps1
src/: cli.rs  main.rs  ui.rs
src/commands/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  os.rs  system.rs
