[package]
name = "systerm"
version = "0.1.0"
edition = "2024"
authors = ["Eetu Niittymäki <eetu945@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI system monitoring tool written in Rust"
readme = "README.md"
homepage = "https://github.com/eetu-niittymaki/systerm"
repository = "https://github.com/eetu-niittymaki/systerm"
keywords = ["cli", "system", "ratatui", "sysinfo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
sysinfo = "0.38.3"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
wgpu = "28.0.0"
